# on-call-tutti

./: .gitignore  README.md  links.txt  run.sh
.github/workflows/: go.yml  main.yml  pandoc.yml
docs/: devops-slides.html  index.html
html/: devops-slides.html
monorepo/: WORKSPACE.bazel  bazel-monorepo  debug.sh  dlv.sh  go.mod  go.sum  go_deps.bzl
monorepo/projects/algorithms/: README.md
monorepo/projects/algorithms/on-call/: README.md
monorepo/projects/algorithms/on-call/001/src/main/java/com/accreativos/oncalltutti/greeter/: Greeter.java
monorepo/projects/algorithms/on-call/001/src/main/java/com/accreativos/oncalltutti/main/: BUILD.bazel  Main.java
monorepo/projects/algorithms/on-call/002/src/main/java/com/accreativos/oncalltutti/main/: BUILD.bazel  Main.java  OnCallSchedule.java
monorepo/projects/algorithms/on-call/002/src/test/java/com/accreativos/oncalltutti/greeter/: BUILD.bazel  GreeterTest.java
monorepo/projects/algorithms/on-call/comparator/: BUILD.bazel
monorepo/projects/algorithms/on-call/comparator/src/main/resources/input/: 002.csv
monorepo/projects/algorithms/on-call/comparator/src/main/resources/output/: 001.csv  002.csv
monorepo/projects/algorithms/on-call/comparator/src/test/java/com/accreativos/comparator/: AplanarRangosFechas.java  OnCallSchedule.java  RangoFechas.java  ReSolver.java  Solver.java
monorepo/projects/algorithms/on-call/comparator/src/test/java/com/accreativos/compartor/: BUILD.bazel  OnCallSchedule.java  Solver.java
monorepo/projects/algorithms/on-call/initial/input/: 001.csv
monorepo/projects/algorithms/on-call/initial/output/: 001.csv
monorepo/projects/github/actions/code/sample01/: run.sh
monorepo/projects/github/actions/code/sample01/cmd/hypothetical/: BUILD.bazel  main.go
monorepo/projects/github/actions/code/sample01/pkg/hypothetical/: BUILD.bazel  config.go  filereader.go  run.go
monorepo/projects/github/actions/release/sample01/: action.yml  run.sh
monorepo/projects/samples/go_hello_world/: BUILD.bazel
monorepo/projects/samples/go_web/: BUILD.bazel  main.go
monorepo/projects/samples/java_greeter/src/main/java/com/kriscfoster/javagreeter/main/: BUILD.bazel
monorepo/projects/samples/java_greeter/src/test/java/com/kriscfoster/javagreeter/greeter/: BUILD.bazel
monorepo/projects/samples/node_calculator/: BUILD.bazel
monorepo/projects/samples/node_web/: BUILD.bazel
monorepo/projects/samples/python_calculator/: BUILD.bazel  range.py
monorepo/projects/samples/python_web/: BUILD.bazel
pandoc/: schema2.drawio
pandoc/markdown/: devops-slides.md  index.md  intro_v1.md  intro_v2.md  ranking.md
pandoc/styles/: styles.html
sandbox/kumuluzee-jpa/: BUILD  WORKSPACE  pom.xml
sandbox/kumuluzee-jpa/src/main/java/com/kumuluz/ee/samples/jpa/: Configuration.java  Customer.java  CustomerApplication.java  CustomerResource.java  CustomerService.java  TimeRange.java  TimeRangeResource.java  TimeRangeService.java
sandbox/kumuluzee-jpa/src/main/resources/: config.yaml
sandbox/kumuluzee-jpa/src/main/resources/input/: 001.csv
