load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_binary(
    name = "Solver",
    main_class = "com.accreativos.comparator.Solver",
    runtime_deps = [":libs"],
)

java_library(
    name = "libs",
    # srcs = glob(["src/main/java/**/*.java"]),
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//:__subpackages__"],
)