load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "main",
    srcs = ["Main.java","OnCallSchedule.java"],
    visibility = ["//:__subpackages__"]
)

java_binary(
    name = "Main",
    main_class = "com.accreativos.oncalltutti.main.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":main"],
)
